SHIFT TAB, CTRL SHIFT TAB shortcuts does not toggle snap, snap mode on off anymore. #47300

Closed
opened 2016-02-02 12:55:41 +01:00 by Sunburn · 9 comments

System Information
Linux Mint 17.3 (Ubuntu 14.01.1), GTX 970

Blender Version
Broken: (7c04c3c)
Worked: (f337fea, Lastest stable)

Short description of error

Exact steps for others to reproduce the error
SHIFT A, place any object on stage.
SHIFT TAB nothing happens, expected to switch snap on/off or display the relative pie menu if pies are enabled.
TAB switch to edit mode
SHIFT TAB nothing happens, expected to switch snap on/off or display the relative pie menu if pies are enabled.

**System Information** Linux Mint 17.3 (Ubuntu 14.01.1), GTX 970 **Blender Version** Broken: (7c04c3c) Worked: (f337fea, Lastest stable) **Short description of error** **Exact steps for others to reproduce the error** SHIFT A, place any object on stage. SHIFT TAB nothing happens, expected to switch snap on/off or display the relative pie menu if pies are enabled. TAB switch to edit mode SHIFT TAB nothing happens, expected to switch snap on/off or display the relative pie menu if pies are enabled.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Sunburn self-assigned this 2016-02-02 12:55:41 +01:00
Author

Added subscriber: @Sunburn

Added subscriber: @Sunburn

#47304 was marked as duplicate of this issue

#47304 was marked as duplicate of this issue

Added subscribers: @mont29, @Sergey

Added subscribers: @mont29, @Sergey
Sunburn was unassigned by Sergey Sharybin 2016-02-02 14:22:47 +01:00
Bastien Montagne was assigned by Sergey Sharybin 2016-02-02 14:22:47 +01:00

Please don't assign bugs by yourself, leave triaging up to developers.

@mont29, this is caused by the USE_NON_LATIN_KB_WORKAROUND commit. Assigning to you now.

Please don't assign bugs by yourself, leave triaging up to developers. @mont29, this is caused by the `USE_NON_LATIN_KB_WORKAROUND` commit. Assigning to you now.

No wonder… this is really insane code.

No wonder… this is really insane code.

This issue was referenced by b80c07321b

This issue was referenced by b80c07321ba9611b19557d245c67f6933b80ec95

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscribers: @ideasman42, @EugenioPignataro

Added subscribers: @ideasman42, @EugenioPignataro
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47300
No description provided.